src/objects/jj_rb_NHS_Trust__c.object
<CustomObject>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <label>Business Phone</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Postal_Code__c</fullName>
        <label>Business Postal Code</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Street__c</fullName>
        <label>Business Street</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_Business_City__c</fullName>
        <label>Business City</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_Business_Country__c</fullName>
        <label>Business Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_Business_State__c</fullName>
        <label>Business State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_NHS_Trust_ID__c</fullName>
        <externalId>true</externalId>
        <label>NHS Trust ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_Region__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Region</label>
        <referenceTo>jj_rb_Region__c</referenceTo>
        <relationshipLabel>NHS Trusts</relationshipLabel>
        <relationshipName>NHS_Trusts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jj_rb_Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>NHS Trust</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Street__c</columns>
        <columns>jj_rb_Business_City__c</columns>
        <columns>Business_Postal_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>NHS Trust Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NHS Trusts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>